--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -12,5 +12,12 @@
   "warningMessage": "Attention! If only DEPENDENTS, CHILDREN or COMPANIONS will participate in the activity, check the box above.",
   "warningMessageLight": "Attention! If you have DEPENDENTS, CHILDREN or COMPANIONS, click on the \"ADD DEPENDANTS\" button to register them. Enter the full name, date of birth and any other required fields.",
   "addDependant": "Add dependants/companions",
-  "next": "Next"
+  "next": "Next",
+  "responsibleName": "Name (Owner or Responsible)",
+  "nationality": "Nationality",
+  "birthdayDate": "Birthday date",
+  "dependentName": "Dependant/companion's name",
+  "dependentBirthdayDate": "Birth Date (Dependant/companion)",
+  "removeDependent": "Remove dependent",
+  "onlyNumbers": "Must only contain numbers"
 }
