--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -20,5 +20,8 @@
   "dependentBirthdayDate": "Birth Date (Dependant/companion)",
   "removeDependent": "Remove dependent",
   "onlyNumbers": "Must only contain numbers",
-  "onlyDependantsValidationInfo": "Submit dependents or uncheck \"Dependents only\""
+  "onlyDependantsValidationInfo": "Submit dependents or uncheck \"Dependents only\"",
+  "additionalInfo": "Additional information",
+  "cell": "Cellphone",
+  "invalidEmail": "Invalid email"
 }
