--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -23,5 +23,76 @@
   "onlyDependantsValidationInfo": "Submit dependents or uncheck \"Dependents only\"",
   "additionalInfo": "Additional information",
   "cell": "Cellphone",
-  "invalidEmail": "Invalid email"
+  "invalidEmail": "Invalid email",
+  "disclaimer": "Term of liability and risk communication",
+  "completeName": "Full name",
+  "document": "Document",
+  "instructions": "Read the guidelines carefully and then pass them on, OBLIGATORYLY, to your companions.",
+  "numberOne": "Before the start of each activity, technical safety procedures and instructions will be announced to all participants. Pay attention, clarify your doubts and strictly follow the instructions given by the driver.",
+  "numberTwo": "The activities require equipment such as: helmet, seat, carabiner, pulley, figure eight brake, which will be provided by our company. The use of the equipment is mandatory whenever requested by the drivers present.",
+  "numberThree": "Our team is trained for the most unusual risk situations, and is prepared to carry out rescues and provide first aid. Therefore, drivers must be respected and you must follow the instructions given by them. Remember they are here to help you.",
+  "numberFour": "Adventure activities often involve the practice of risky activities, other times a certain discomfort. To fully benefit from our experience, it is important to have a good sense of humor, team spirit and a willingness to face unexpected events and challenges.",
+  "numberFive": "The Dream Network hotels are fully signposted. Therefore, observe the signs and never disobey the instructions contained in them. Walk on permitted trails, and do not venture into unknown areas without first seeking guidance from a guide, as they are familiar with the risks that may affect your physical integrity.",
+  "numberSix": "Never exceed your limits with impulsive actions, as they are the major causes of incidents/accidents. The responsibility for not following the guide's instructions or for acting irresponsibly and unauthorized is entirely yours, as well as the risks you assume for inappropriate behavior. You are responsible for any losses and damages resulting from actions or omissions caused by your fault. Remember that your physical integrity also depends on the actions you take arbitrarily.",
+  "numberSeven": "Anyone who leaves the event or part of it, after it has started, will assume ALL the risks of the adopted measure.",
+  "numberEight": "All efforts are made to provide you and your companions with moments of leisure and happiness, with full safety. However, since this is a natural environment, slips, falling branches, sprains, insect bites, venomous animal bites, scratches, and minor abrasions may occur. In any of these situations, our guides will be ready and prepared to assist you.",
+  "numberNine": "For your greater safety, the Dream Network hotels hire the ECOTRIP Personal Accident Insurance for all their activity practices. Information about this can be obtained at the hotel receptions.",
+  "numberTen": "Any fact or situation not described in this document must be immediately reported to the management of the Dream Network.",
+  "declaration": "Declaration",
+  "declarationData": {
+    "1": "I declare that, being physically and mentally fit, I have carefully read and accept all the conditions above. I affirm that I have been informed of the risks and responsibilities inherent in the activities I will participate in, agreeing that the company and its employees are NOT responsible for uncontrollable situations, acts of God, force majeure, and for not following instructions during the event.",
+    "2": "I also declare that I will adopt conduct that contributes to the maintenance of harmony, integration, and cordiality between the participants and the hotel staff. Thus, I accept the conditions presented to me and my companions above without any questions.",
+    "3": "I declare that I have been informed and assume responsibility for adopting all preventive safety measures to face the public health emergency of international concern due to the COVID-19 pandemic, as well as following the following COVID-19 prevention recommendations:",
+    "4": {
+      "mask": "Always wear masks when leaving my residence, frequently wash my hands up to the wrists with soap and water, or sanitize them with 70% alcohol gel.",
+      "cough": "When coughing or sneezing, cover your nose and mouth with a tissue or with your arm, not your hands.",
+      "touching": "Avoid touching your eyes, nose, and mouth with unwashed hands. When touching, always wash your hands as previously instructed.",
+      "distance": "Maintain a minimum distance of about 2 meters from anyone coughing or sneezing.",
+      "physical_contact": "Avoid hugs, kisses, and handshakes. Adopt a friendly behavior without physical contact, but always with a smile.",
+      "cleaning": "Frequently sanitize your cell phone and children's toys.",
+      "personal_items": "Do not share personal items, such as cutlery, towels, plates, and glasses."
+    },
+    "5": "If the main client or companion has any of the comorbidities below, they must inform the person responsible for the establishment:",
+    "6": {
+      "comorbidities": {
+        "1": "Chronic heart diseases",
+        "2": "Congenital heart disease",
+        "3": "Poorly controlled heart failure",
+        "4": "Decompensated ischemic heart disease",
+        "5": "Chronic respiratory diseases",
+        "6": "Poorly controlled COPD and asthma",
+        "7": "Interstitial lung diseases with complications",
+        "8": "Cystic fibrosis with recurrent infections",
+        "9": "Bronchopulmonary dysplasia with complications",
+        "10": "Chronic kidney diseases in advanced stages (grades 3, 4, and 5)",
+        "11": "Patient on dialysis",
+        "12": "Immunosuppressed",
+        "13": "Transplanted solid organs and bone marrow",
+        "14": "Immunosuppression due to diseases and/or medications",
+        "15": "Carrier of chromosomal diseases with immune fragility",
+        "16": "Diabetes (as per clinical judgment)"
+      }
+    }
+  },
+  "petProcedures": "Rules and procedures with pets",
+  "pets_policy": {
+    "allowed_in_room": "Pets are allowed in rooms or cabins if they are accustomed to this type of environment. Please do not leave your pet alone in the accommodation, as they may make noise and disturb other guests.",
+    "walks_policy": "Walks or outings are only allowed with a leash, as many adults and children are afraid of dogs, even if they are gentle.",
+    "kennel_availability": "Our kennel, located near the reception, is available for pets during the guest's stay at no additional charge, as long as there is availability and the pet does not mind being without the owner. Cleaning, maintenance, feeding, and water in the kennel are the sole responsibility of the guest.",
+    "sanitary_law": "According to health regulations, pets are not allowed in the restaurant, snack bar, store, and pool areas, except for guide dogs.",
+    "no_bedding_policy": "Pets are not allowed to use bedding and towels; if used, the replacement cost will be charged.",
+    "cleaning_notice": "Guests are requested to notify the housekeeping staff in advance about the presence of the pet if it will be left alone, to allow for safe and proper cleaning of the room.",
+    "responsibility_policy": "Our hotel is not responsible for any damages caused by pets, either in the rooms or in other hotel areas, or to other guests or staff, and such damages must be reimbursed by the pet owner.",
+    "other_animals_notice": "In case of bringing other types of animals or birds, or if you have any questions, please inform the reception in advance."
+  },
+  "activity": "Operating hours of activities",
+  "mountain_riding": "Mountain Riding",
+  "scheduling_info": "The scheduling for the activity must be done the day before after 4:30 PM at the horse stable.",
+  "first_departure": "First departure at 9:00 AM",
+  "second_departure": "Second departure at 2:00 PM",
+  "capacity_limit": "Capacity limit: 8 horses and two carriages per time slot. Each carriage can carry only 1 adult and 1 child under 12 years old.",
+  "climbing": "Tree Climbing",
+  "scheduling_info_arborism": "The scheduling is done on the same day.",
+  "operating_hours_arborism": "Times to do the tree climbing: 10:00 AM, 2:00 PM, and 4:00 PM.",
+  "capacity_limit_arborism": "Capacity limit: 8 people per time slot."
 }
