--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -23,5 +23,76 @@
   "onlyDependantsValidationInfo": "Envíe dependientes o desmarque \"Solo dependientes\"",
   "additionalInfo": "Información adicional",
   "cell": "Teléfono móvil",
-  "invalidEmail": "Correo electrónico no válido"
+  "invalidEmail": "Correo electrónico no válido",
+  "disclaimer": "Plazo de responsabilidad y comunicación de riesgos",
+  "completeName": "Nombre completo",
+  "document": "Documento",
+  "instructions": "Lee atentamente las pautas y luego transmítelas, OBLIGATORIAMENTE, a tus acompañantes.",
+  "numberOne": "Antes del inicio de cada actividad, se anunciarán a todos los participantes los procedimientos e instrucciones técnicas de seguridad. Presta atención, aclara tus dudas y sigue estrictamente las instrucciones del conductor.",
+  "numberTwo": "Las actividades requieren de equipos como: casco, asiento, mosquetón, polea, freno en forma de ocho, los cuales serán proporcionados por nuestra empresa. El uso del equipo es obligatorio siempre que lo soliciten los conductores presentes.",
+  "numberThree": "Nuestro equipo está formado para las situaciones de riesgo más inusitadas, y está preparado para realizar rescates y prestar primeros auxilios. Por lo tanto, hay que respetar a los conductores y hay que seguir las instrucciones que les den. Recuerda que están aquí para ayudarte.",
+  "numberFour": "Las actividades de aventura implican muchas veces la práctica de actividades de riesgo, otras veces una cierta incomodidad. Para beneficiarse plenamente de nuestra experiencia, es importante tener buen sentido del humor, espíritu de equipo y disposición para afrontar eventos y desafíos inesperados.\n",
+  "numberFive": "Los hoteles de la Red de Sueños están completamente señalizados. Por lo tanto, observe las señales y nunca desobedezca las orientaciones contenidas en ellas. Camine por senderos permitidos y no se aventure en un lugar desconocido sin antes solicitar orientación a un guía, ya que él conoce bien los riesgos que pueden afectar su integridad física.",
+  "numberSix": "Nunca exceda sus límites con actitudes impulsivas, ya que son las principales causantes de incidentes/accidentes. La responsabilidad de no seguir las instrucciones del guía o de actuar de manera irresponsable y no autorizada es completamente suya, al igual que los riesgos que asuma por un comportamiento inapropiado. Usted es responsable de las pérdidas y daños derivados de acciones u omisiones causadas por su culpa. Recuerde que su integridad física también depende de las acciones que realice arbitrariamente.",
+  "numberSeven": "La persona que abandone el evento o parte de él, después de haber comenzado, asumirá TODOS los riesgos de la medida adoptada.",
+  "numberEight": "Todos los esfuerzos están dirigidos a proporcionar a usted y a sus acompañantes momentos de ocio y felicidad, con total seguridad. Sin embargo, debido a que se trata de un entorno natural, pueden ocurrir resbalones, caídas de ramas, esguinces, picaduras de insectos, picaduras de animales venenosos, arañazos y pequeñas abrasiones. En cualquiera de estas situaciones, nuestros guías estarán preparados y listos para ayudarlos.",
+  "numberNine": "Para su mayor seguridad, los hoteles de la Red de Sueños contratan el Seguro de Accidentes Personales ECOTRIP para todas sus actividades. La información correspondiente puede obtenerse en las recepciones de los hoteles.",
+  "numberTen": "Cualquier hecho o situación que no esté descrita en este documento debe ser comunicada inmediatamente a la dirección de la Red de Sueños.",
+  "declaration": "Declaración",
+  "declarationData": {
+    "1": "Declaro que, estando física y mentalmente apto, he leído atentamente y acepto todas las condiciones anteriores. Afirmo que he sido informado de los riesgos y responsabilidades inherentes a las actividades en las que voy a participar, aceptando que la empresa y sus empleados NO son responsables por situaciones no controlables, casos fortuitos, fuerza mayor y por el incumplimiento de las orientaciones durante el evento.",
+    "2": "También declaro adoptar una conducta que contribuya al mantenimiento de la armonía, integración y cordialidad entre los participantes y el equipo de trabajo del hotel. Así, acepto las condiciones presentadas para mí y mis acompañantes arriba, sin cuestionamientos.",
+    "3": "Declaro haber sido informado y asumo la responsabilidad de adoptar todas las medidas preventivas de seguridad para hacer frente a la emergencia de salud pública de importancia internacional derivada de la pandemia de COVID-19, así como seguir las siguientes recomendaciones de prevención de COVID-19:",
+    "4": {
+      "mask": "Siempre usar mascarillas cuando salga de mi residencia, lavarme las manos con frecuencia hasta la altura de las muñecas, con agua y jabón, o desinfectarlas con alcohol en gel al 70%.",
+      "cough": "Al toser o estornudar, cubrirse la nariz y la boca con un pañuelo o con el brazo, y no con las manos.",
+      "touching": "Evitar tocarse los ojos, la nariz y la boca con las manos sin lavar. Al hacerlo, lávese siempre las manos como ya se ha indicado.",
+      "distance": "Mantener una distancia mínima de unos 2 metros de cualquier persona que esté tosiendo o estornudando.",
+      "physical_contact": "Evitar abrazos, besos y apretones de manos. Adoptar un comportamiento amigable sin contacto físico, pero siempre con una sonrisa en el rostro.",
+      "cleaning": "Desinfectar con frecuencia el teléfono móvil y los juguetes de los niños.",
+      "personal_items": "No compartir objetos de uso personal, como cubiertos, toallas, platos y vasos."
+    },
+    "5": "Si el cliente titular o su acompañante presenta alguna de las comorbilidades a continuación, debe informarlas al responsable del establecimiento:",
+    "6": {
+      "comorbidities": {
+        "1": "Enfermedades cardíacas crónicas",
+        "2": "Enfermedad cardíaca congénita",
+        "3": "Insuficiencia cardíaca mal controlada",
+        "4": "Enfermedad cardíaca isquémica descompensada",
+        "5": "Enfermedades respiratorias crónicas",
+        "6": "EPOC y asma mal controlados",
+        "7": "Enfermedades pulmonares intersticiales con complicaciones",
+        "8": "Fibrosis quística con infecciones recurrentes",
+        "9": "Displasia broncopulmonar con complicaciones",
+        "10": "Enfermedades renales crónicas en etapa avanzada (grados 3, 4 y 5)",
+        "11": "Paciente en diálisis",
+        "12": "Inmunosuprimido",
+        "13": "Trasplantado de órganos sólidos y de médula ósea",
+        "14": "Inmunosupresión por enfermedades y/o medicamentos",
+        "15": "Portador de enfermedades cromosómicas con fragilidad inmunológica",
+        "16": "Diabetes (según criterio clínico)"
+      }
+    }
+  },
+  "petProcedures": "Normas y procedimientos con mascotas",
+  "pets_policy": {
+    "allowed_in_room": "Se permite la estancia de animales en habitaciones o cabañas si están acostumbrados a este tipo de convivencia. Por favor, no deje a su mascota sola en el alojamiento, ya que puede hacer ruido y molestar a otros huéspedes.",
+    "walks_policy": "Las caminatas o paseos solo están permitidos con correa, ya que hay muchos adultos y niños que tienen miedo de los perros, incluso si son dóciles.",
+    "kennel_availability": "Nuestro perrera, cerca de la recepción, está a disposición para la permanencia de los animales durante la estancia del huésped sin ningún cargo adicional, siempre que haya disponibilidad y que el animal no se sienta incómodo sin su dueño. La limpieza, mantenimiento, alimentación y agua en la perrera son responsabilidad exclusiva del huésped.",
+    "sanitary_law": "De acuerdo con la ley de salud pública, no se permite el acceso de animales en las áreas del restaurante, cafetería, tienda y piscina, excepto perros guía.",
+    "no_bedding_policy": "No se permite el uso de ropa de cama y baño para el animal; si se utiliza, se cobrará el costo de reposición del material.",
+    "cleaning_notice": "Se solicita al huésped avisar previamente al personal de limpieza sobre la presencia del animal si se queda solo, para permitir una limpieza segura y adecuada del apartamento.",
+    "responsibility_policy": "Nuestro hotel no se hace responsable de los daños causados por el animal, tanto en las habitaciones como en otras dependencias del hotel, ni a otros huéspedes o colaboradores, y dichos daños deben ser resarcidos por el dueño del animal.",
+    "other_animals_notice": "En caso de la llegada de otros tipos de animales o aves, o si tiene alguna duda, favor de informar con anticipación a la recepción."
+  },
+  "activity": "Horarios de funcionamiento de las actividades",
+  "mountain_riding": "Cabalgata de las Montañas",
+  "scheduling_info": "La reserva para la actividad debe hacerse el día anterior después de las 16:30 en el establo de caballos.",
+  "first_departure": "Primera salida a las 9:00",
+  "second_departure": "Segunda salida a las 14:00",
+  "capacity_limit": "Límite de plazas: 8 caballos y dos carretas por horario. Cada carreta puede llevar solo 1 adulto y 1 niño menor de 12 años.",
+  "climbing": "Arborismo",
+  "scheduling_info_arborism": "La reserva se hace el mismo día.",
+  "operating_hours_arborism": "Horarios para realizar el arborismo: 10:00, 14:00 y 16:00.",
+  "capacity_limit_arborism": "Límite de 8 personas por horario."
 }
