--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -23,5 +23,76 @@
   "onlyDependantsValidationInfo": "Envie dependentes ou desmarque a opção \"Apenas dependentes\"",
   "additionalInfo": "Informações adicionais",
   "cell": "Celular",
-  "invalidEmail": "E-mail inválido"
+  "invalidEmail": "E-mail inválido",
+  "disclaimer": "Termo de responsabilidade e comunicação de risco",
+  "completeName": "Nome completo",
+  "document": "Documento",
+  "instructions": "Leia atentamente as orientações e a seguir repasse, OBRIGATORIAMENTE para seus acompanhantes.",
+  "numberOne": " Antes do início da cada atividade, procedimentos e instruções técnicas de segurança serão anunciados a todos os participantes. Fique atento, esclareça suas dúvidas e siga rigorosamente as instruções passadas pelo condutor.",
+  "numberTwo": "As atividades exigem equipamentos como: capacete, cadeirinha, mosquetão, roldana, freio oito, que serão fornecidos por nossa empresa. O uso do equipamento é obrigatório sempre que solicitado pelos condutores presentes.",
+  "numberThree": "Nossa equipe é treinada para as situações de riscos mais inusitadas, estando preparada para realizar resgates e atendimento de primeiros socorros. Portanto, os condutores deverão ser respeitados e você deverá seguir as instruções dadas por eles. Lembre-se que eles estão aqui para auxiliá-lo.",
+  "numberFour": "Atividades de aventura implicam, muitas vezes, na prática de atividades de risco, outras vezes em certo desconforto. Para aproveitar plenamente nossa experiência é importante ter bom humor, espírito de equipe e disposição para enfrentar imprevistos e desafios.",
+  "numberFive": "Os hotéis da Rede dos Sonhos são totalmente sinalizados. Portanto, observe as placas de sinalização e nunca desobedeça às orientações nelas contidas. Caminhe por trilhas permitidas, e não se aventure em local desconhecido sem antes solicitar orientação de um condutor, pois ele conhece bem os riscos que podem afetar sua integridade física.",
+  "numberSix": "Jamais exceda seus limites em atitudes impulsivas, pois elas são as maiores causadoras de incidentes/acidentes. A responsabilidade por não seguir as instruções do condutor ou por tomar atitudes irresponsáveis e não autorizadas é toda sua, bem como riscos que assumir pela conduta não apropriada. Você é responsável e arcará com as perdas e danos decorrentes de ações ou omissões originadas por sua culpa. Lembre-se que sua integridade física também depende das ações que você praticar arbitrariamente.",
+  "numberSeven": "A pessoa que abandonar o evento ou parte, após o mesmo ter iniciado, dele assumirá TODOS os riscos da medida adotada.",
+  "numberEight": "Todos os esforços são para proporcionar a você e seus acompanhantes, momentos de lazer e felicidade, com toda segurança. Contudo por se tratar de ambiente natural, podem ocorrer escorregões, quedas de galhos, entorses, picadas de insetos, picadas de animais peçonhentos, arranhões e pequenas escoriações. Em qualquer das situações nossos guias estarão aptos e prontos para auxiliá-los.",
+  "numberNine": "Para sua maior segurança os hotéis da Rede dos Sonhos contratam o Seguro de Acidentes Pessoais ECOTRIP para todas suas práticas de atividades. Informações a respeito podem ser obtidas nas recepções dos hotéis.",
+  "numberTen": "Qualquer fato ou situação que não estejam descritos neste documento deverão ser comunicados imediatamente à direção da Rede dos Sonhos.",
+  "declaration": "Declaração",
+  "declarationData": {
+    "1": "Declaro que, estando fisicamente e mentalmente apto, li atentamente e aceito todas as condições acima. Afirmo que fui informado dos riscos e responsabilidades inerentes às atividades que irei participar concordando que a empresa, seus colaboradores NÃO são responsáveis por situações não controláveis, de caso fortuito, força maior e pelo não cumprimento das orientações durante o evento.",
+    "2": "Declaro ainda adotar conduta que contribua para a manutenção da harmonia, integração e cordialidade entre os participantes e a equipe de trabalho do hotel. Assim, aceito as condições apresentadas para mim e para meus acompanhantes acima, sem quaisquer questionamentos.",
+    "3": "Declaro ter sido informado e assumo a responsabilidade de adotar todas as medidas preventivas de segurança para o enfrentamento da emergência em saúde pública de importância internacional decorrente da pandemia da COVID-19 assim como seguir as recomendações de prevenção à COVID-19 seguintes:",
+    "4": {
+      "mask": "Sempre utilizar máscaras em situações de saída de minha residência, lavar com frequência as mãos até a altura dos punhos, com água e sabão, ou então higienizá-las com álcool em gel 70%.",
+      "cough": "Ao tossir ou espirrar, cobrir o nariz e boca com lenço ou com o braço, e não com as mãos.",
+      "touching": "Evitar tocar olhos, nariz e boca com as mãos não lavadas. Ao tocar, lavar sempre as mãos como já indicado.",
+      "distance": "Manter uma distância mínima de cerca de 2 metros de qualquer pessoa tossindo ou espirrando.",
+      "physical_contact": "Evitar abraços, beijos e apertos de mãos. Adotar um comportamento amigável sem contato físico, mas sempre com um sorriso no rosto.",
+      "cleaning": "Higienizar com frequência o celular e os brinquedos das crianças.",
+      "personal_items": "Não compartilhar objetos de uso pessoal, como talheres, toalhas, pratos e copos."
+    },
+    "5": "Caso o cliente titular ou acompanhante apresente algumas das comorbidades abaixo, deve-se informá-la ao responsável pelo estabelecimento:",
+    "6": {
+      "comorbidities": {
+        "1": "Doenças cardíacas crônicas",
+        "2": "Doença cardíaca congênita",
+        "3": "Insuficiência cardíaca mal controlada",
+        "4": "Doença cardíaca isquêmica descompensada",
+        "5": "Doenças respiratórias crônicas",
+        "6": "DPOC e asma mal controlados",
+        "7": "Doenças pulmonares intersticiais com complicações",
+        "8": "Fibrose cística com infecções recorrentes",
+        "9": "Displasia broncopulmonar com complicações",
+        "10": "Doenças renais crônicas em estágio avançado (graus 3, 4 e 5)",
+        "11": "Paciente em diálise",
+        "12": "Imunossuprimido",
+        "13": "Transplantado de órgãos sólidos e de medula óssea",
+        "14": "Imunossupressão por doenças e/ou medicamentos",
+        "15": "Portador de doenças cromossômicas com fragilidade imunológica",
+        "16": "Diabetes (conforme juízo clínico)"
+    }
+    }
+  },
+  "petProcedures": "Normas e procedimentos com animais de estimação",
+  "pets_policy": {
+    "allowed_in_room": "É permitido ficar com os hóspedes em apto ou chalé animais que estejam habituados a este tipo de convívio. Por favor, não deixe seu animal de estimação sozinho na acomodação, pois ele pode fazer barulho e incomodar os demais hóspedes.",
+    "walks_policy": "Caminhadas ou passeios é permitido somente com a coleira (guia), pois há muitos adultos e crianças que têm medo de cães, mesmo que sejam mansos.",
+    "kennel_availability": "Nosso canil, próximo à recepção, está à disposição para permanência no período em que o hóspede se encontrar aqui hospedado, sem nenhum acréscimo, desde que tenha vaga e que o animal não estranhe estar sem o dono. Limpeza, manutenção, alimentação e água no canil, fica a cargo exclusivo do hóspede.",
+    "sanitary_law": "De acordo com lei da vigilância sanitária, não é permitido o acesso de animais no interior das áreas do restaurante, lanchonete, loja e piscina, exceto cão guia.",
+    "no_bedding_policy": "No aposento não é permitido o uso no animal, de material de cama e banho, caso seja usado será cobrado o valor de reposição do material.",
+    "cleaning_notice": "É solicitado ao hóspede o prévio aviso às camareiras sobre a presença do animal, caso fique sozinho, para permitir a segura e adequada limpeza do apartamento.",
+    "responsibility_policy": "Nosso hotel não se responsabiliza por danos causados pelo animal, tanto nos aposentos como em outras dependências do hotel, e mesmo para outros hóspedes ou colaboradores, devendo estes danos serem ressarcidos pelo dono do animal.",
+    "other_animals_notice": "No caso de vinda de outros tipos de animais ou aves, ou em caso de alguma dúvida, favor informar com antecedência a recepção."
+  },
+  "activity": "Horários de funcionamento das atividades",
+  "mountain_riding": "Cavalgada das Montanhas",
+  "scheduling_info": "O agendamento para a atividade deve ser feito no dia anterior após as 16:30 na cocheira dos cavalos.",
+  "first_departure": "Primeira saída às 9:00",
+  "second_departure": "Segunda saída às 14:00",
+  "capacity_limit": "Limite de vagas: 8 cavalos e duas charretes por horário. Cada charrete pode levar somente 1 adulto e 1 criança abaixo de 12 anos.",
+  "climbing": "Arvorismo",
+  "scheduling_info_arborism": "O agendamento é feito no mesmo dia.",
+  "operating_hours_arborism": "Horários para realizar o arvorismo: 10:00, 14:00 e 16:00.",
+  "capacity_limit_arborism": "Limite de 8 pessoas por horário."
 }
