--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -95,5 +95,6 @@
   "scheduling_info_arborism": "O agendamento é feito no mesmo dia.",
   "operating_hours_arborism": "Horários para realizar o arvorismo: 10:00, 14:00 e 16:00.",
   "capacity_limit_arborism": "Limite de 8 pessoas por horário.",
-  "agree_terms": "Concordo com os termos de serviço."
+  "agree_terms": "Concordo com os termos de serviço.",
+  "success": "Cadastro realizado com sucesso"
 }
